# Guide-Book

./: .gitignore  Ch-1_History_CBSE_Class_10_FINAL.docx  REBUILD_PROMPT.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  test_generator.py
.claude/hooks/: session-start.sh
.streamlit/: config.toml
config/: __init__.py  book_formatting.py  constants.py  subjects.py
config/chapters/: class_10_english.json  class_10_mathematics.json  class_10_science.json  class_10_social_science.json  class_9_english.json  class_9_mathematics.json  class_9_science.json  class_9_social_science.json
core/: __init__.py  parsers.py  progress.py  session.py
core/models/: __init__.py  base.py  parts.py
data/autosave/: class_10_history_ch01.json
data/imports/: history_ch1_nationalism.json
generators/: __init__.py
generators/docx/: __init__.py  base.py  helpers.py  html_converter.py  styles.py  template_creator.py
generators/docx/parts/: __init__.py  cover_page.py  part_a_pyq.py  part_b_concepts.py  part_c_answers.py  part_custom.py  part_d_practice.py  part_e_constitutional.py  part_e_formulas.py  part_e_grammar.py  (+5 more)
generators/pdf/: __init__.py  converter.py
generators/unified/: __init__.py  content_builder.py  docx_renderer.py  html_renderer.py
styles/: __init__.py  theme.py
templates/: guide-book-template.docx  guide-book-template.dotx
tests/: __init__.py  test_models.py  test_parts.py  test_progress.py
ui/: __init__.py
ui/components/: __init__.py  navigation.py  preview.py  utils.py
utils/: __init__.py  autosave.py  logger.py
