[project]
name = "guide-book-generator"
version = "1.0.0"
description = "CBSE Study Guide Generator for Class 10 Social Science"
requires-python = ">=3.9"

[tool.ruff]
line-length = 130
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",   # Module level import not at top of file (Streamlit requires st.set_page_config first)
    "F403",   # Star imports in __init__.py for re-exporting
    "F401",   # Unused imports in __init__.py files (used for re-exporting)
    "E501",   # Line too long (acceptable in HTML templates and long strings)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"app.py" = ["E402", "E501"]
"ui/components/preview.py" = ["E501"]  # HTML templates have long lines
"generators/pdf/converter.py" = ["F401"]  # Conditional imports for optional dependencies

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
